# electronics-shop-project

./: pyproject.toml
homework-6/: main.py
src/: errors.py  item.py  keyboard.py  phone.py
tests/: test_item.py  test_item_2.py  test_item_3.py  test_item_4.py  test_item_5.py  test_item_6.py  test_keyboard.py  test_keyborad_1.py  test_phone.py
